//2.55 Changes

//Alpha 62
Updated 'string_functions.zh'
	Moved 'printf' and 'sprintf' into 'std::string::'
	This allows them to be used if desired, but the new internal versions will be used by default.
Internalize 'sprintf' and 'printf' functions.
	These should be MUCH faster than their ZScript counterparts, with 99% the same results.
	Take 0-16 varargs at this time; could theoretically expand to 18...
	Only difference from ZScript functions: if you would have gotten an array out-of-bounds error
		by having too many '%' in the formatstr, these will simply use '0' as the value instead of erroring.
		This matches the behavior of the ZScript function for <16 args, though the ZScript function used
		a size 16 buffer, thus going beyond that caused avoidable script errors.
	( Venrob, 13th April, 2020 )
Fix minor errors with 'file'->
	Remove a debug trace
	Fix file->OpenMode not reassigning pointer
Add new ZASM Debugger modes
	Holding 'Ctrl' in addition to either 'Shift+Insert' or 'Alt+Insert' will perform
	the normal operation of the given combination, but will skip all ZASM printing until
	it reaches the next break- allowing higher FPS during that time.
	( Venrob, 12th April, 2020 )
Heavily optimize array initialization, and somewhat optimize array access.
	Arrays now use new ZASM instructions:
		WRITEPODARRAYRR, WRITEPODARRAYRV, WRITEPODARRAYVR, WRITEPODARRAYVV
			-These write to arrays, either using 2 registers, 2
				values, or a combination.
		READPODARRAYR, READPODARRAYV
			-These read from arrays, using either a register or
				a value for the index.
Alpha is now 62
	( Venrob, 11th April, 2020 )

//Alpha 61
Add a clear slots dialog to the script assign menu. This replaces the two clear buttons
	present prior, and allows more specific options. You can clear only missing, only
	preserved, and only imported ZASM, as well as any type of your choice, or all slots.

Added a config+checkbox to allow toggling recovering missing ZScript scripts.