@@ -106,5 +106,6 @@ X(	TooManyType,				P,	A,	E,	STR,	VOID,	"There are too many types named %s. Check
 X(	RangeInverted,				CX,	A,	E,	INT,	INT,	"Value range must have smallest...largest; %d...%d is inverted."				)
 X(	RangeEqual,				CX,	A,	W,	INT,	INT,	"Range is of equal value (%d...%d) on both ends"				)
 X(	BadReassignCall,				C,	A,	W,	STR,	VOID,	"Reassigning function '%s' was called on a constant value! Reassign failed."				)
+X(	MixedSwitch,				CX,	A,	E,	VOID,	VOID,	"Switch contains both strings and numbers"				)
 
 #undef STR
