@@ -142,6 +142,24 @@
 
 enum {ENC_METHOD_192B104=0, ENC_METHOD_192B105, ENC_METHOD_192B185, ENC_METHOD_211B9, ENC_METHOD_211B18, ENC_METHOD_MAX};
 
+//Moved these OS-dependent defs from 'ffasm.cpp', to be global.
+#ifdef ALLEGRO_MACOSX
+#define strnicmp strncasecmp
+#endif
+
+#ifdef ALLEGRO_MACOSX
+#define strnicmp strncasecmp
+#endif
+
+#ifdef ALLEGRO_LINUX
+#define strnicmp strncasecmp
+#endif
+
+#ifdef _MSC_VER
+#define stricmp _stricmp
+#define strnicmp _strnicmp
+#endif
+
 #ifdef ALLEGRO_DOS
 //already defined in DOS
 /*
@@ -970,7 +988,9 @@ enum
 	qr_WRITING_NPC_WEAPON_UNIQUE_SPRITES, qr_COMBOSCRIPTS_LAYER_0, qr_COMBOSCRIPTS_LAYER_1, qr_COMBOSCRIPTS_LAYER_2,
 	//84
 	qr_COMBOSCRIPTS_LAYER_3, qr_COMBOSCRIPTS_LAYER_4, qr_COMBOSCRIPTS_LAYER_5, qr_COMBOSCRIPTS_LAYER_6,
-	qr_OLD_INIT_SCRIPT_TIMING, qr_DO_NOT_DEALLOCATE_INIT_AND_SAVELOAD_ARRAYS, qr_BITMAP_AND_FILESYSTEM_PATHS_ALWAYS_RELATIVE,
+	qr_OLD_INIT_SCRIPT_TIMING, qr_DO_NOT_DEALLOCATE_INIT_AND_SAVELOAD_ARRAYS,
+	qr_BITMAP_AND_FILESYSTEM_PATHS_ALWAYS_RELATIVE, qr_PARSER_STRINGSWITCH_INSENSITIVE,
+	//85
 	
     qr_MAX
 };
@@ -2052,6 +2072,8 @@ public:
     //byte ewpnclass, lwpnclass, guyclass; //Not implemented
     
     //byte ewpnclass, lwpnclass, guyclass; //Not implemented
+	
+	long switchkey; //used for switch statements
     
     void Clear()
     {
@@ -2067,6 +2089,7 @@ public:
 		comboposref = 0;
         memset(d, 0, 8 * sizeof(long));
         a[0] = a[1] = 0;
+		switchkey = 0;
     }
     
     refInfo()
@@ -2095,6 +2118,7 @@ public:
 		fileref = rhs.fileref, subscreenref = rhs.subscreenref;
         memcpy(d, rhs.d, 8 * sizeof(long));
         memcpy(a, rhs.a, 2 * sizeof(long));
+		switchkey = rhs.switchkey;
         return *this;
     }
 };
